<resources>
    <string name="app_name">PocketBook</string>
    <string name="title_activity_recent_transaction">RecentTransactionActivity</string>
    <string name="title_home">Track</string>
    <string name="title_safely_spend">Safely Spend</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="glad_to_see_you_back">Glad to see you back</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="recategorise">Recategorise</string>
    <string name="search_on_nweb">Search on web</string>
    <string name="more">More</string>
    <string name="you_haven_t_added_any_photos_or_notes_to_this_transaction_yet_add_them_below">You haven\'t added any photos or notes to this transaction yet. Add them below</string>
    <string name="uncategorised">Uncategorised</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
