<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context="com.dmc.pocketbook.TransactionActivity">


    <TextView
        android:id="@+id/text_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="X" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="40dp"


        android:background="@drawable/transaction_dialog_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/transaction_dialog_bg_top">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/transaction_icon" />

            <TextView
                android:id="@+id/text_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="2dp"
                android:layout_above="@id/text_day"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/textColorBlack"
                android:text="$37.50" />

            <TextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:textColor="@color/textColorBlack"
                android:text="10 Jan" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            app:srcCompat="@drawable/cat_food" />

        <LinearLayout
            android:id="@+id/layoutCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_main_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/colorBlue"
                android:text="Food &amp; Drinks" />

            <TextView
                android:id="@+id/text_subcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorGray"
                android:text="Other Food &amp; Drinks" />
        </LinearLayout>

        <TextView
            android:layout_below="@+id/layoutCategories"
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView4"
            android:layout_alignStart="@+id/imageView4"
            android:layout_marginTop="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/textColorBlack"
            android:text="CBD Noodles Sydney Au" />

        <RelativeLayout
            android:id="@+id/photoLayout"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/colorLightGray"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_below="@+id/text_name"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/colorGray"
                android:text="@string/you_haven_t_added_any_photos_or_notes_to_this_transaction_yet_add_them_below" />
        </RelativeLayout>

        <ImageView

            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/photoLayout"
            android:layout_alignStart="@+id/photoLayout"
            android:layout_below="@+id/photoLayout"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/city" />

        <TextView
            android:id="@+id/text_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView5"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/imageView5"
            android:layout_toRightOf="@+id/imageView5"
            android:textColor="@color/textColorBlack"
            android:text="Citi Rewards Signature Credit Card" />

        <LinearLayout
            android:id="@+id/sepLayout"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorGray"
            android:layout_below="@id/text_payment"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/panel_bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/sepLayout"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/recategorise" />

                <TextView
                    android:id="@+id/Recategorise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/recategorise" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/search" />

                <TextView
                    android:id="@+id/text_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/search_on_nweb"
                    android:textColor="@color/textColorBlack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/more" />

                <TextView
                    android:id="@+id/text_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/more" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
